fixed preloader z-index

--- a/assets/less/import/_preloader.less
+++ b/assets/less/import/_preloader.less
@@ -2,12 +2,14 @@
 Preloader
 ----- */
 ._loader {
+    position: relative;
     font: 25vw @GinesoDemi;
     color: @dark;
     padding-top: @100px;
     // overflow: hidden;
     pointer-events: none;
     transition: opacity .8s @easeOutExpo;
+    z-index: 10;
     
     @media @mobile {
         font-size: @250px;
